[package]
name = "yellow-peach"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.7.0"
iterable = "0.4.1"
itertools = "0.10.1"
structopt = { version = "0.3", default-features = false }
reacto = {path = "/home/tom/hdx/rust/reacto"}